syntax = "proto3";

package aleg.laptops;

// option go_package = ".;pb";
option go_package = "github.com/aleg/go-grpc-laptops/pb";

import "memory_message.proto";

message Filter {
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_ghz = 3;
  Memory min_ram = 4;
}
